--- a/portal/classification/printlist/scoreList.html
+++ b/portal/classification/printlist/scoreList.html
@@ -86,7 +86,7 @@
 
         <td class="small-font system-default clst" rowspan="2"></td>
             <td class="normal-font clst bridge"><span>{{list.phone}}</span></td>
-            <td rowspan="2" class="clse"></td>
+            <td rowspan="2" class="clse">{{list.price}}</td>
         </tr>
         <tr>
             <td class="small-font system-default">آزمون مجدد</td>
