--- a/portal/classification/printlist/defaultList.html
+++ b/portal/classification/printlist/defaultList.html
@@ -116,7 +116,7 @@
 			<td class="colory cslc"></td>
 			<td class="colory cslc"></td>
 			<td class="normal-font clst bridge"><span >{{list.phone}}</span></td>
-			<td rowspan="2" class="clse"></td>
+			<td rowspan="2" class="clse">{{list.price}}</td>
 		</tr>
 		<tr>
 			<td class="small-font system-default">نمره</td>
