--- a/portal/classification/returnclasses/display.html
+++ b/portal/classification/returnclasses/display.html
@@ -14,7 +14,7 @@
 
 
 <style type="text/css">
-	.classes-running {
+	.returnclasses {
 		/*height: 75px;*/
 		width: 100px;
 		background: #9fbe03;
@@ -29,7 +29,10 @@
 	}
 </style>
 <a href="">
-	<div class="classes-running" classesid="{{global.classesid}}">
+	<div class="returnclasses" 
+	classesid = "{{global.classesid}}" 
+	usersid = "{{global.usersid}}" 
+	classificationid = "{{global.classification_id}}">
 	ثبت مجدد در کلاس
 	</div>
 </a>
