some thing :( khodam ham nemidonam che kardam vali anjam shod :))

--- a/portal/branch/move/display.html
+++ b/portal/branch/move/display.html
@@ -1,7 +1,7 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-<form class="ajx" method="post" action="permission/{{global.url}}">
+<form class="ajx" method="post" action="branch/move/users">
 	{{forms.make(branch_cash)}}
 </form>
 {%endblock%}
