--- a/portal/report/plan/display.html
+++ b/portal/report/plan/display.html
@@ -1,7 +1,7 @@
 {# reza mohiti #}
 {% extends layout %}
 {% block content %}
-<form method ="post" action ="" class=" ">
+<form method ="post" action ="report/plan/classes" class=" ">
 	{{forms.make(report_list)}}
 </form>
 
