--- a/portal/report/classes/personstatus/display.html
+++ b/portal/report/classes/personstatus/display.html
@@ -1,5 +1,6 @@
 {# reza mohiti #}
 {% extends layout %}
-{% block body %}
+{% block content %}
+<!-- <a class="a-undefault icomessage" title="دریافت فایل اکسل" href="{{global.url}}/xlsx=1"></a><br> -->
 {{tagMaker.reportList(list)}}
 {%endblock%}
