--- a/portal/report/plan/display.html
+++ b/portal/report/plan/display.html
@@ -1,12 +1,12 @@
 {# reza mohiti #}
 {% extends layout %}
 {% block content %}
-<form method ="post" action ="report/plan/classes" class=" ">
+<form method ="post" action ="" class=" " id= "report_form">
 	{{forms.make(report_list)}}
 </form>
 
 <!-- <br> -->
-<!-- <a href="" class="start-report a-undefault" target="_blank"> شروع گزارش </a> -->
+<!-- <a href="" class="start-report " target="_blank"> شروع گزارش </a> -->
 <!-- <br> -->
 
 {{dtable.make(dataTable)}}
