--- a/portal/report/classes/bridge/display.html
+++ b/portal/report/classes/bridge/display.html
@@ -1,6 +1,6 @@
 {# reza mohiti #}
 {% extends layout %}
-{% block body %}
-<a class="a-undefault" href="{{global.url}}/xlsx=1">xlsx</a><br>
+{% block content %}
+<a class="a-undefault icomessage" title="دریافت فایل اکسل" href="{{global.url}}/xlsx=1"></a><br>
 {{tagMaker.reportList(list)}}
 {%endblock%}
