--- a/portal/report/classes/display.html
+++ b/portal/report/classes/display.html
@@ -17,7 +17,7 @@
 
 <form method ="post"  class="notajx" id="report_form">
 	<input type="hidden" name="path-url" value="{{global.url}}">
-	<a  style="display:none; " class="a-undefault report-link" target="_blank"> شروع گزارش </a>
+	<a  style="display:none; " class=" report-link" target="_blank"> شروع گزارش </a>
 	{{forms.make(report_list)}}
 </form>
 
