ready to upload to astan server :)

--- a/portal/report/home/display.html
+++ b/portal/report/home/display.html
@@ -18,7 +18,7 @@
 <a class="report-main-link" href="report/classes/" > گزارش از کلاس ها </a>
 <a class="report-main-link" href="report/price/" > گزارش مالی </a>
 <a class="report-main-link" href="report/plan/" > گزارشات مبتنی بر طرح </a>
-<a class="report-main-link" href="report/plan/" > گزارشات روزانه </a>
+<a class="report-main-link" href="report/daily/" > گزارشات روزانه </a>
 <script type="text/javascript">
 	$(".report-main-link").fadeIn(1000);
 </script>
