--- a/portal/report/daily/display.html
+++ b/portal/report/daily/display.html
@@ -24,6 +24,11 @@
 <a class="report-day-link" href="report/daily/day=wed" >چهار شنبه</a>
 <a class="report-day-link" href="report/daily/day=thu" >پنج شنبه</a>
 <a class="report-day-link" href="report/daily/day=fri" >جمعه</a>
-
+<br>
+تعداد کلاس های فعال در این روز :
+<b>{{day_count['count']}} </b>
+<br>
+تعداد فراگیران حاضر در این روز : <b> {{day_count['num']}} </b>
+<br>
 {{tagMaker.reportList(list)}}
 {%endblock%}
