ready to upload on astan server :)

--- a/portal/report/classes/display.html
+++ b/portal/report/classes/display.html
@@ -6,7 +6,7 @@
 		padding: 10px;
 		clear: both;
 		background-color: #ececec;
-		border: 1px solid green;
+		border: 1px solid #0ABBEC;
 		display: inline-block;
 		margin: 2px 10px 10px auto;
 		border-radius: 5px;
