--- a/portal/report/daily/bridge/display.html
+++ b/portal/report/daily/bridge/display.html
@@ -25,12 +25,7 @@
 <a class="report-day-link" href="report/daily/day=thu" >پنج شنبه</a>
 <a class="report-day-link" href="report/daily/day=fri" >جمعه</a>
 <br>
-تعداد کلاس های فعال در روز  {{day|lang}} :
-<b>{{day_count['count']}} </b>
-<br>
-تعداد فراگیران حاضر در روز {{day|lang}}: <b> {{day_count['num']}} </b>
-<br>
-<a class="report-day-link" href="report/daily/bridge/day={{day}}" >دریافت شماره تماس فراگیران روز {{day|lang}}</a>
+<a class="icomessage a-undefault"  href="report/daily/bridge/day={{day}}/xlsx=1" title="دریافت فایل اکسل" ></a>
 <br>
 
 {{tagMaker.reportList(list)}}
