--- a/portal/macro/tagMaker.html
+++ b/portal/macro/tagMaker.html
@@ -126,7 +126,7 @@
 
 		td, th {
 			padding: 5px;
-			border: 1px solid black;
+			border: 1px solid #eee;
 			font-size: 10px;
 		}
 
@@ -134,7 +134,7 @@
 			background: #eee;
 			padding: 10px;
 			font-size: 1.618rem;
-			border: 1px solid black;
+			border: 1px solid #eee;
 		}
 	</style>
 <div class="list-wrapper">
