--- a/portal/login/selectbranch/display.html
+++ b/portal/login/selectbranch/display.html
@@ -44,7 +44,7 @@ p{
 	<div class="login-form">
 	<p>
 	شما به طور همزمان در چند شعبه فعالیت دارید.
-	<br> برای ورد به پنل شخصی خود طلفا شعبه را انتخاب کنید.
+	<br> برای ورد به پنل شخصی خود لطفا شعبه را انتخاب کنید.
 		<br>
 		ورود به عنوان:
 		<br>
