--- a/portal/price/list/display.html
+++ b/portal/price/list/display.html
@@ -1,5 +1,6 @@
 {# reza mohiti #}
 {% extends layout %}
 {% block content %}
+جستجو در نام کاربری افراد ، شماره تراکنش  و تاریخ شهریه
 {{dtable.make(dataTable)}}
 {%endblock%}
