bug merge branch fix

--- a/portal/branch/change/display.html
+++ b/portal/branch/change/display.html
@@ -8,7 +8,7 @@
 تغییرات شعبه برای کاربر <b> {{name_family}} </b>
 <br>
 <br>
-<form class="ajx" method="post">
+<form class="ajx" method="post" action="branch/status=change/usersid={{usersid}}">
 	{{forms.make(branch_cash)}}
 </form>
 
