--- a/portal/classification/printlist/rokhani.html
+++ b/portal/classification/printlist/rokhani.html
@@ -91,7 +91,8 @@
 				{{key+1}}
 			</td>
 			<td class="s1 s4" valign=center >{{list.name}} {{list.family}}</td>
-			<td class="s1 s5 s4" valign=center>{{list.username}} <br> {{list.mobile}} - {{list.phone}}</td>
+			<td class="s1 s5 s4" valign=center>{{list.username}} <br>
+					<span class="bridge"> {{list.mobile}} - {{list.phone}}</span></td>
 			<td class="s1 s5 s4" valign=center></td>
 			<td class="s1 s4" valign=center></td>
 			<td class="s1 s2 s4" valign=center> </td>
