--- a/portal/classification/printlist/tajvid.html
+++ b/portal/classification/printlist/tajvid.html
@@ -97,7 +97,8 @@
 	<tr>
 		<td style="s1 s3 s6" height="40" align="center" valign=middle sdval="1" sdnum="1033">{{key +1}}</td>
 		<td style="s1 s7 s6" align="left" valign=center>{{list.name}} {{list.family}}</td>
-		<td style="s1 s7 s6" align="left" valign=center>{{list.username}} <br> {{list.mobile}} - {{list.phone}}</td>
+		<td style="s1 s7 s6" align="left" valign=center>{{list.username}} <br>
+			<span class="bridge"> {{list.mobile}} - {{list.phone}}</span></td>
 		<td style="s1 s9" align="left" valign=center></td>
 		<td style="s1 s3 s6" align="left" valign=center></td>
 		<td style="s1 s7 s6" align="left" valign=center></td>
