--- a/portal/login/selectbranch/display.html
+++ b/portal/login/selectbranch/display.html
@@ -43,6 +43,9 @@ p{
 	</div>
 	<div class="login-form">
 	<p>
+	{%if supervisor %}
+		<a>ورود با کاربری <b>{{name_family}}</b></a><br>
+	{%endif%} 
 	شما به طور همزمان در چند شعبه فعالیت دارید.
 	<br> برای ورد به پنل شخصی خود لطفا شعبه را انتخاب کنید.
 		<br>
