--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -130,7 +130,10 @@
 				<div>{{list.name}}</div>
 				{% for j, link in list.dropdown %}
 				<div>
-					<a href="{{link.url}}" {%if link.url == "logout"%}class="a-undefault"{%endif%}>{{link.name}}</a>
+					<a href="{{link.url}}" 
+					{%if link.url == "logout" %}class="a-undefault"{%endif%}
+					{%if link.url == "login/selectbranch" %}class="a-undefault"{%endif%}
+					>{{link.name}}</a>
 				</div>
 				{%endfor%}
 			</div>
