--- a/portal/classification/returnclasses/display.html
+++ b/portal/classification/returnclasses/display.html
@@ -6,9 +6,9 @@
 	ثبت مجدد فراگیر در کلاس
 </b></p>
 <p>
-	این فراگیر قبلا در این کلاس بوده است و به علت {{global.because}} در تاریخ {{global.date_delete}} حذف شده است
+	این فراگیر قبلا در این کلاس بوده است و به علت <b><a style="color:red">{{global.because}}</a></b> در تاریخ <b>{{global.date_delete}}</b>از این کلاس حذف شده است.
 	<br>
-	در صورتی که میخواهید فرایگر مجددا به کلاس اضافه شود بر روی دکمه زیر کلیک کنید
+	در صورتی که می خواهید فراگیر مجددا به کلاس اضافه شود بر روی دکمه زیر کلیک کنید
 	
 </p>
 
