master or finally

--- a/portal/report/price/display.html
+++ b/portal/report/price/display.html
@@ -18,4 +18,5 @@
 <form method ="post" action ="" id= "report_form">
 	{{forms.make(report_list)}}
 </form>
+{{dtable.make(dataTable)}}
 {%endblock%}
