mr hefz bug fix

--- a/portal/hefzlig/mrhefz/display.html
+++ b/portal/hefzlig/mrhefz/display.html
@@ -1,6 +1,11 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-<h3>آقای حفظ</h3>
+<center>
+	
+	<h3>جدول آقای حفظ مسابقات
+	<br> 
+	<a style="color:#0C706F">{{lig_name}}</a></h3>
+</center>
 {{tagMaker.list(result)}}
 {%endblock%}
