options table and bug fix

--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -101,7 +101,7 @@
 {% if debug %}
 
 	<!-- develop mod -->
-		<div style="
+<!-- 		<div style="
 		    background-color: red;
 		    color: black;
 		    font-family: 'WYekan';
@@ -115,7 +115,7 @@
 			<center>
 				شما در حالت توسعه پورتال مرکز قرآن و حدیث آستان مقدس قم  هستید ... 
 			</center>
-		</div>
+		</div> -->
 
 		
 	<!-- debug mod -->
