--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -158,6 +158,7 @@
 					<a href="{{link.url}}" 
 					{%if link.url == "logout" %}class="a-undefault"{%endif%}
 					{%if link.url == "login/selectbranch" %}class="a-undefault"{%endif%}
+					{%if link.url == "race/online" %}class="a-undefault"{%endif%}
 					>{{link.name}}</a>
 				</div>
 				{%endfor%}
