hefz lig complete :)

--- a/portal/hefzlig/racing/display.html
+++ b/portal/hefzlig/racing/display.html
@@ -60,7 +60,7 @@
 	}
 
 	.settings *:hover{
-		background-color: #f16971;
+		background-color: #9fbe03;
 	}
 
 	.red {
@@ -153,6 +153,9 @@ $(function(){
 
 
 <section class="settings">
+	<span id="save-sort" raceid="{{raceid}}">
+		ذخیره ترتیب تیم ها
+	</span>
 	<span id="telavat1" raceid="{{raceid}}">
 		تلاوت اول 
 	</span>
