--- a/portal/classification/printlist/display.html
+++ b/portal/classification/printlist/display.html
@@ -49,6 +49,7 @@
 	<a href="classification/printlist/classesid={{classesid}}/type=rokhani" class=" botton-link a-undefault">آزمون روخوانی</a>
 	<a href="classification/printlist/classesid={{classesid}}/type=tajvid" class=" botton-link a-undefault">آزمون تجوید</a>
 	<a href="classification/printlist/classesid={{classesid}}/type=cover" class=" botton-link a-undefault">جلد</a>
+	<a href="classification/printlist/classesid={{classesid}}/type=absence" class=" botton-link a-undefault">ثبت غیبت با لیست کلاسی</a>
 	
 	<label class="label-custom" >نمایش پل های ارتباطی
 	<input type="checkbox" value="checked" id="bridge" checked="checked" >
